# tekmeris

./: .gitignore  .zenodo.json  CITATION.cff  README.md
.github/workflows/: tests.yml
papers/P001-sut-to-sam/code/: 02_validate_supply_side.py  03_validate_use_side.py  05_validate_institutional_block.py  10_assemble_sam.py  12_generate_workbook.py  13_paper_tables.py
papers/P001-sut-to-sam/data/: SOURCES.md
papers/P001-sut-to-sam/data/derived/: concordance_products.csv  macro_sam_formulas.csv  sarb_kbp_series.csv
papers/P001-sut-to-sam/data/raw/kenya/ifpri/: 003_IFPRI_SAM_KEN_2019_POP.csv
papers/P001-sut-to-sam/data/raw/netherlands/: naio_10_cp16_NL_2019.json
papers/P001-sut-to-sam/data/raw/statssa/: Supply and use tables 2018 - 2019.xlsx
papers/P001-sut-to-sam/outputs/: P001_SA_SAM_2019_v02.xlsx  PL_2019_generation.md  capital_split.md  household_split.md  institutional_validation.md  kenya_structural_audit.md  macro_sam_construction.csv  macro_sam_construction.md  netherlands_macro_sam.csv  netherlands_macro_sam_balanced.csv  p001_sam_v01.csv  use_validation.csv  use_validation.md
papers/P001-sut-to-sam/paper/: .latexmkrc  main.tex  references.bib
papers/P001-sut-to-sam/paper/sections/: appendix.tex  applications.tex  conclusion.tex  data.tex  disclosure.tex  discussion.tex  introduction.tex  related.tex  results.tex
papers/P001-sut-to-sam/paper/tables/: tab_capital_grid.tex  tab_jrc.tex  tab_kenya.tex  tab_macro_notable.tex  tab_netherlands.tex  tab_occupation.tex
papers/P001-za-sam/code/: 01_extract_concordance.py  02_validate_supply_side.py  03_validate_use_side.py  04_extract_account_map.py  05_validate_institutional_block.py  06_construct_macro_sam.py  07_split_capital.py  08_split_occupations.py  09_split_households.py  10_assemble_sam.py  11_balance_sam.py  12_generate_workbook.py  13_paper_tables.py  14_kenya_audit.py  15_netherlands_generate.py
papers/P001-za-sam/data/derived/: concordance_industries.csv  sam_account_map.csv
papers/P001-za-sam/data/raw/: NOT-REDISTRIBUTED.md
papers/P001-za-sam/data/raw/kenya/ifpri/: 001_readme.txt  (+1 more)
papers/P001-za-sam/data/raw/netherlands/: naio_10_cp15_NL_2019.json  nasa_10_nf_tr_NL_2019.json
papers/P001-za-sam/outputs/: AT_2019_generation.md  P001_SA_SAM_2019_v02.xlsx  PL_2019_generation.md  assembly_report.md  balance_report.md  capital_split.csv  capital_split.md  household_split.md  institutional_validation.md  kenya_macro_comparison.csv  kenya_structural_audit.md  macro_sam_by_kind.csv  macro_sam_construction.md  netherlands_generation.md  occupation_split.csv  occupation_split.md  p001_sam_v02.csv  supply_validation.csv  supply_validation.md  use_validation.md
papers/P001-za-sam/paper/sections/: appendix.tex  conclusion.tex  disclosure.tex  discussion.tex  introduction.tex  method.tex
papers/P001-za-sam/paper/tables/: tab_kenya.tex
papers/S001-edikit-jors/paper/: main.tex  references.bib
papers/S001-edikit/paper/: .latexmkrc  figure1.tex  main.tex  references.bib
toolkit/: README.md  pyproject.toml
toolkit/recipes/: README.md
toolkit/recipes/audit/: README.md  audit_sam.py
toolkit/recipes/audit/examples/kenya/: controls.csv  kenya_audit.md  kinds.csv
toolkit/recipes/replicate/: README.md
toolkit/src/edikit/: __init__.py
toolkit/src/edikit/benchmark/: __init__.py
toolkit/src/edikit/data/: __init__.py  ansd.py  concordance.py  eurostat.py  kbp.py  sam.py  sut.py
toolkit/src/edikit/decide/: __init__.py
toolkit/src/edikit/forecast/: __init__.py
toolkit/src/edikit/model/: __init__.py  accounts.py  balancing.py
toolkit/src/edikit/pipeline/: __init__.py  audit.py  eurostat_sam.py  reconcile.py
toolkit/src/edikit/report/: __init__.py  workbook.py
toolkit/tests/: test_data_modules.py  test_package.py
