[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edikit"
version = "0.1.2"
description = "Reproducible construction and auditing of social accounting matrices from official statistics"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "openpyxl",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/edikit"]
