[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edikit"
version = "0.2.1"
description = "Reproducible construction and auditing of social accounting matrices from official statistics"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "openpyxl",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
# The library itself needs only openpyxl. Two P001 replication scripts
# reach beyond it: 07_split_capital.py reads the Stats SA AFS workbooks,
# which are legacy .xls and need xlrd, and 13_paper_tables.py draws the
# paper's figure with matplotlib. Neither is imported by edikit, so the
# library's single-dependency property is unaffected; install this extra
# to run the full replication.
replicate = ["xlrd", "matplotlib"]

[tool.hatch.build.targets.wheel]
packages = ["src/edikit"]
