[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edikit"
version = "0.2.5"
description = "Reproducible construction and auditing of social accounting matrices from official statistics"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{name = "Kodzovi Abalo"}]
keywords = [
    "social accounting matrix", "SAM", "supply and use tables",
    "input-output", "national accounts", "RAS", "GRAS",
    "reproducibility", "provenance", "Eurostat",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "openpyxl",
]

[project.urls]
Homepage = "https://github.com/kodzovee9/tekmeris"
Repository = "https://github.com/kodzovee9/tekmeris"
Issues = "https://github.com/kodzovee9/tekmeris/issues"
Archive = "https://doi.org/10.5281/zenodo.21419195"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
# The library itself needs only openpyxl. Two P001 replication scripts
# reach beyond it: 07_split_capital.py reads the Stats SA AFS workbooks,
# which are legacy .xls and need xlrd, and 13_paper_tables.py draws the
# paper's figure with matplotlib. Neither is imported by edikit, so the
# library's single-dependency property is unaffected; install this extra
# to run the full replication.
replicate = ["xlrd", "matplotlib"]

[tool.hatch.build.targets.wheel]
packages = ["src/edikit"]

# The published test suite is the 38 tests that all run. The P002 Senegal
# integration test needs the JRC matrix, which is held with that
# unreleased paper and is absent from the public repository (see the
# matching exclusion in scripts/sync-public.sh). Shipping it in the sdist
# would hand anyone who installs from PyPI a test that can only skip, and
# a loose end they cannot resolve. S001 describes the 38-test suite.
[tool.hatch.build.targets.sdist]
exclude = ["tests/test_p002_*.py"]
